--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,13 @@
-Hi I'm Jessie. I like dogs, tv, and movies. 
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Hi I'm Jessie Wong <br>
+  A girl who codes</h1>
+
+<p>My first paragraph.</p>
+
+</body>
+</html>
+    
+    
