--- a/aboutme.html
+++ b/aboutme.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body bgcolor="#FF0000">
 
-<h1>Hi I'm Jessie Wong <br>
+<h1>Hwelcome. I'm Jessie Wong <br>
   A girl who codes</h1>
+<br>
+  
+<img src="https://previews.123rf.com/images/findingmydigitalfeet/findingmydigitalfeet1502/findingmydigitalfeet150200035/36311176-Cute-cartoon-Brussels-Sprouts-Stock-Vector.jpg" width="104" height="142">
 
-<p>My first paragraph.</p>
+<br>     
+<p title="Read Bout meee">
+  I'm a incoming junior at Lynbrook High School. 
+</p>
+<br>
+  
+  
+<h2> FUN FACT!</h2>
+<p style="color:red;">A flock of crows is called a murder.</p>
+  
+
+<img src="http://amysnotdeadyet.com/stuff/murder-of-crows.jpg" width="104" height="142">
 
 </body>
 </html>
