--- a/aboutme.html
+++ b/aboutme.html
@@ -16,8 +16,9 @@
   
   
 <h2> FUN FACT!</h2>
-<p style="color:red;">A flock of crows is called a murder.</p>
-  
+<p>A flock of crows is called a .....</p>
+
+<p><font size="6">murder.</font></p>
 
 <img src="http://amysnotdeadyet.com/stuff/murder-of-crows.jpg" width="104" height="142">
 
