--- a/firstcircuit.html
+++ b/firstcircuit.html
@@ -4,3 +4,7 @@
 For now we can light up a lightbulb and control it with a button. Series does not work because we do not have a sufficient power source.
 </p>
 
+<br>
+
+
+<img src="http://amysnotdeadyet.com/stuff/murder-of-crows.jpg" width="104" height="142">
