--- a/firstcircuit.html
+++ b/firstcircuit.html
@@ -7,4 +7,6 @@ For now we can light up a lightbulb and control it with a button. Series does no
 <br>
 
 
-<img src="http://amysnotdeadyet.com/stuff/murder-of-crows.jpg" width="104" height="142">
+<img src="File_001.jpg" alt = "refresh" style = "width:400px;height:300px;">
+
+
