--- a/firstcircuit.html
+++ b/firstcircuit.html
@@ -9,4 +9,9 @@ For now we can light up a lightbulb and control it with a button. Series does no
 
 <img src="File_000.jpeg" alt="refresh" style="width:400px;height:300px;">
 
+<img src="File_002.jpeg" alt="refresh" style="width:400px;height:300px;">
+
+<img src="File_003.jpeg" alt="refresh" style="width:400px;height:300px;">
+
+<img src="File_004.jpeg" alt="refresh" style="width:400px;height:300px;">
 
