--- a/ledlightshow.html
+++ b/ledlightshow.html
@@ -1,1 +1,13 @@
 
+<h1>Lit with LED's <br> </h1>
+
+<p> We used arduino to create patterns with led lights.
+</p>
+
+
+<br>
+
+
+<img src="File_000.jpeg" alt="refresh" style="width:400px;height:300px;">
+
+<img src="screenshot3.PNG" alt="refresh" style="width:400px;height:300px;">
