--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
+  
+ <h2>JavaScript Alert</h2>
+
+<button onclick="myFunction()">Try it</button>
+
+<script>
+function myFunction() {
+    alert("All ye who go beyond this point, BEWARE! jk welcome");
+}
+</script>
+
 <body bgcolor="#FF0000">
 
 <h1>Hwelcome. I'm Jessie Wong <br>
@@ -13,7 +24,7 @@
   I'm a incoming junior at Lynbrook High School. 
 </p>
 <br>
-  
+ 
   
 <h2> FUN FACT!</h2>
 <p>A flock of crows is called a .....</p>
