--- a/aboutme.html
+++ b/aboutme.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   
- <h2>JavaScript Alert</h2>
 
-<button onclick="myFunction()">Try it</button>
+<button onclick="myFunction()">WELCOME (click on meee)</button>
 
 <script>
 function myFunction() {
