--- a/aboutme.html
+++ b/aboutme.html
@@ -31,6 +31,8 @@ function myFunction() {
 <p><font size="6">murder.</font></p>
 
 <img src="http://amysnotdeadyet.com/stuff/murder-of-crows.jpg" width="104" height="142">
+  
+<img src="https://giphy.com/gifs/8RczH5vL2k7Ju/html5" alt="awww yeah" style="width:48px;height:48px;">
 
 </body>
 </html>
