--- a/aboutme.html
+++ b/aboutme.html
@@ -32,7 +32,10 @@ function myFunction() {
 
 <img src="http://amysnotdeadyet.com/stuff/murder-of-crows.jpg" width="104" height="142">
   
-<img src="https://giphy.com/gifs/8RczH5vL2k7Ju/html5" alt="awww yeah" style="width:48px;height:48px;">
+  <br>
+  
+  
+<iframe src="https://giphy.com/embed/8RczH5vL2k7Ju" width="480" height="300" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/school-test-yeah-8RczH5vL2k7Ju">via GIPHY</a></p>
 
 </body>
 </html>
