--- a/aboutme.html
+++ b/aboutme.html
@@ -33,10 +33,20 @@ function myFunction() {
 <img src="http://amysnotdeadyet.com/stuff/murder-of-crows.jpg" width="104" height="142">
   
   <br>
-  
+ 
+  <p><font size = "10">me when there are still lucky charms in the jar: </font><p>
+ <br>
   
 <iframe src="https://giphy.com/embed/8RczH5vL2k7Ju" width="480" height="300" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/school-test-yeah-8RczH5vL2k7Ju">via GIPHY</a></p>
 
+  <br>
+    <p><font size = "10">me when there are no more luckies left: </font><p>
+  
+  <br>
+  
+  <iframe src="https://giphy.com/embed/11mg18l2JvX1TO" width="480" height="333" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/song-office-gif-11mg18l2JvX1TO">via GIPHY</a></p>
+  
+  
 </body>
 </html>
     
