--- a/aboutme.html
+++ b/aboutme.html
@@ -46,6 +46,14 @@ function myFunction() {
   
   <iframe src="https://giphy.com/embed/11mg18l2JvX1TO" width="480" height="333" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/song-office-gif-11mg18l2JvX1TO">via GIPHY</a></p>
   
+  <br>
+  
+  <p><font size = "10">My first day of Rollins like: </font><p>
+  
+  <br>
+  
+  <iframe src="https://giphy.com/embed/SmyiPAlF7vxIY" width="480" height="240" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/toy-story-buzz-lightyear-gif-SmyiPAlF7vxIY">via GIPHY</a></p>
+  
   
 </body>
 </html>
