--- a/aboutme.html
+++ b/aboutme.html
@@ -48,7 +48,7 @@ function myFunction() {
   
   <br>
   
-  <p><font size = "10">My first day of Rollins like: </font><p>
+  <p><font size = "10">On the first day of a new school like: </font><p>
   
   <br>
   
